# 02476_Leaf_Shapes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml  tests_2.yml  train_docker_build.yml
cloud_config/: train_config_cpu.yaml
data/: raw.dvc
dockerfiles/: model_api.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
leaf_shapes/: __init__.py  main.py  predict_model.py  train_model.py
leaf_shapes/data/: check_processed_dataset.py  make_dataset.py
leaf_shapes/models/: model.py
models/: model_best.pth.tar.dvc
reports/: README.md
tests/: __init__.py  test_data.py
